--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@
 }
 
 .lato-regular {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 400;
 }
 
@@ -54,15 +54,21 @@
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 /* Animations */
 @keyframes blink {
-  0% { opacity: 1; }
-  50% { opacity: 0; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .blinking-text {
@@ -102,7 +108,9 @@
   padding: 1.25rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(8px);
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease;
 }
 
 .widget-container:hover {
@@ -131,7 +139,7 @@
 }
 
 .station-button {
-  background-color: #007BFF;
+  background-color: #007bff;
   color: white;
   border: none;
   border-radius: 0.375rem;
@@ -164,7 +172,7 @@
   font-size: 16px;
   font-family: Arial;
   font-weight: bold;
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
 }
 
 .station-image {
